...
import androidx.compose.ui.semantics.semantics
import androidx.compose.ui.semantics.testTag
import androidx.compose.ui.text.input.ImeAction
import androidx.compose.ui.tooling.preview.Preview
import com.example.githubapp.R

const val TEXT_FIELD_TAG = "search_text_field_tag"
const val SEARCH_BUTTON_TAG = "search_button_tag"

@OptIn(ExperimentalMaterial3Api::class, ExperimentalComposeUiApi::class)
@Composable
fun SearchBar(
    onSearchClicked: (searchText: String) -> Unit = {}
) {
...
