package com.example.githubapp.data.model

data class User(
    val id: String,
    val username: String,
    val avatarUrl: String
)

